tests/errors/known_bugs/ex7.py
# pylint: disable=missing-function-docstring, missing-module-docstring
def f(x):
    return x**2
